# LiDAR_HumanFollowing

./: README.md
install/: local_setup.sh  setup.sh
install/leg_dector/lib/leg_dector/: human_following  leg_detection
install/leg_dector/share/leg_dector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/leg_dector/: setup.cfg  setup.py
src/leg_dector/leg_dector/: leg_detection.py
src/leg_dector/msg/: DistanceAndAngle.idl  DistanceAndAngle.msg
